--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
