--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "babel-plugin-superjson-next": "^0.4.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.2",
     "typescript": "5.0.2"
   },
   "devDependencies": {
