--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "babel-plugin-superjson-next": "^0.4.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
