--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "@types/request-ip": "^0.0.37",
     "axios": "^1.3.4",
     "babel-plugin-superjson-next": "^0.4.5",
     "eslint": "8.36.0",
@@ -24,6 +25,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "request-ip": "^3.3.0",
     "superjson": "^1.12.2",
     "typescript": "5.0.2"
   },
