--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@prisma/client": "^4.11.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "@types/request-ip": "^0.0.37",
     "axios": "^1.3.4",
     "babel-plugin-superjson-next": "^0.4.5",
+    "bcrypt": "^5.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
