--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1"
