--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "request-ip": "^3.3.0",
     "superjson": "^1.12.2",
+    "swr": "^2.1.5",
     "typescript": "5.0.2"
   },
   "devDependencies": {
